fix: disable chrome overflow anchor from moving page

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -146,6 +146,8 @@ fieldset.form-group {
   display: flex;
   justify-content: center;
   align-items: center;
+  // prevents chrome from moving page around the component
+  overflow-anchor: none;
 }
 
 // aligns our inline components (form inputs)
